--- a/belief_memory_viewer/package.xml
+++ b/belief_memory_viewer/package.xml
@@ -24,7 +24,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>genmsg</build_depend>
   <build_depend>angles</build_depend>
-  <build_depend>lib_pugixml</build_depend>
+  <build_depend>pugixml</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>libqt4-dev</run_depend>
@@ -36,7 +36,7 @@
   <run_depend>cv_bridge</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>angles</run_depend>
-  <run_depend>lib_pugixml</run_depend>
+  <run_depend>pugixml</run_depend>
   <run_depend>yaml-cpp</run_depend>
   <build_depend>message_generation</build_depend>
  
